--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,6 +6,10 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+#__next {
+  height: 100vh;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -15,4 +19,9 @@ a {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.body {
+  padding: 50px 10px;
+  min-height: 100vh;
 }
