Login page template scss

--- a/styles/LoginPage.module.scss
+++ b/styles/LoginPage.module.scss
@@ -6,6 +6,11 @@
     margin: auto;
     padding: 15px;
 
+    h1 {
+        align-self: center;
+        margin: 15px 0;
+    }
+
     input {
         padding: 5px;
         margin-bottom: 15px;
