--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,5 @@
+@import 'vars.scss';
+
 html,
 body {
   padding: 0;
@@ -10,10 +12,6 @@ body {
   height: 100vh;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
 * {
   margin: 0;
@@ -21,8 +19,58 @@ a {
   box-sizing: border-box;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+input {
+  outline: none;
+  border-radius: 4px;
+  padding: 10px;
+  outline: none;
+  border: 0;
+}
+
+button {
+  border: 0;
+  border-radius: 4px;
+  padding: 10px;
+}
+
 .body {
   padding: 50px 10px;
   min-height: 100vh;
   display: flex;
+}
+
+.lightTheme {
+
+  div {
+    background-color: $light-bg-color;
+  }
+
+  h1, h2, h3, h4, h5, label, span {
+    color: $light-text-color;
+  }
+}
+
+.darkTheme {
+
+  div {
+    background-color: $dark-bg-color;
+  }
+
+  h1, h2, h3, h4, h5, label, span {
+    color: $dark-text-color;
+  }
+
+  input {
+    background-color: $dark-bg-color-2;
+    color: $dark-text-color-3;
+    
+    &:focus {
+      background-color: $dark-bg-color-3;
+    }
+  }
 }
